feat: Implement full-stack JWT authentication, API client, and deployment configurations for backend and frontend services.